// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedListItem - Send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-borderRadius-1xfd6ze r-boxShadow-1d1oby0 r-cursor-1loqt21 r-flexDirection-18u37iz r-marginHorizontal-1ybube5 r-marginTop-knv0ih r-touchAction-1otgn73 r-userSelect-lrvibr"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-14lw9ot r-borderRadius-1xfd6ze r-flex-13awgt0 r-justifyContent-1777fci r-overflow-1udh08x r-paddingLeft-1m04atk"
    >
      <div
        className="css-view-1dbjc4n r-backgroundColor-tvqc6p r-backgroundImage-o7i658 r-backgroundRepeat-1w25a1u r-backgroundSize-2gj1kk r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-5soawk"
      />
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-flexGrow-16y2uox r-justifyContent-1777fci r-maxHeight-pm9dpa r-padding-edyy15 r-width-13qz1uu"
      >
        <div
          className="css-view-1dbjc4n r-width-1h2t8mc"
        />
        <div
          className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-marginLeft-1jkjb"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomWidth-wgabs5 r-borderStyle-1phboty r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1wbh5a2 r-justifyContent-1wtj0ep r-paddingBottom-1inuy60"
            style={
              Object {
                "borderBottomColor": "rgba(250,108,119,1.00)",
              }
            }
          >
            <div
              className="css-text-901oao r-color-vaa0vc r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
              dir="auto"
            >
              01.04.19 15:03
            </div>
            <div
              className="css-text-901oao r-color-11zaip3 r-fontFamily-vnw8o6 r-fontSize-a023e6 r-fontWeight-b88u0q r-lineHeight-qvk6io r-marginLeft-1jj8364 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
              dir="auto"
            >
              -
            </div>
            <div
              className="css-view-1dbjc4n r-alignItems-1d09ksm r-display-6koalj r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-11zaip3 r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-lineHeight-qvk6io r-marginRight-1d4mawv r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                dir="auto"
              >
                0.04
              </div>
              <div
                className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
              >
                <div
                  className="css-text-901oao r-color-11zaip3 r-fontFamily-6jnb14 r-fontSize-10x49cs r-fontWeight-b88u0q r-lineHeight-1p6fy00 r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                  dir="auto"
                >
                  G
                </div>
                <div
                  className="css-text-901oao r-color-11zaip3 r-fontFamily-6jnb14 r-fontSize-10x49cs r-fontWeight-b88u0q r-lineHeight-1p6fy00 r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                  dir="auto"
                >
                  $
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1wbh5a2 r-height-1w2pmg r-justifyContent-1777fci r-position-bnwqim"
          >
            <div
              aria-disabled={true}
              className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-k200y r-backgroundColor-qt01xk r-borderColor-y68mpx r-borderWidth-rs99b7 r-height-1w2pmg r-justifyContent-1777fci r-left-1d2f490 r-marginTop-knv0ih r-position-u8s1d r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-1h2t8mc"
              onClick={[Function]}
              onContextMenu={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "WebkitTransitionDuration": "0s",
                  "borderBottomLeftRadius": "0px",
                  "borderBottomRightRadius": "0px",
                  "borderTopLeftRadius": "0px",
                  "borderTopRightRadius": "0px",
                  "transitionDuration": "0s",
                }
              }
              tabIndex="-1"
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
                style={
                  Object {
                    "borderBottomLeftRadius": "-1px",
                    "borderBottomRightRadius": "-1px",
                    "borderTopLeftRadius": "-1px",
                    "borderTopRightRadius": "-1px",
                    "height": "-2px",
                    "width": "-2px",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style={
                    Object {
                      "borderBottomLeftRadius": "-1px",
                      "borderBottomRightRadius": "-1px",
                      "borderTopLeftRadius": "-1px",
                      "borderTopRightRadius": "-1px",
                      "height": "-2px",
                      "width": "-2px",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
                    style={
                      Object {
                        "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                  />
                </div>
              </div>
            </div>
            <div
              className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-justifyContent-17s6mgv r-marginBottom-p1pxzi r-marginRight-1kb76zh r-marginTop-1mnahxq"
            >
              <div
                className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1q142lx r-marginTop-kc8jnq"
              >
                <div
                  className="css-text-901oao css-textMultiLine-cens5h r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-1f529hi r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                  dir="auto"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                      "minWidth": "10px",
                    }
                  }
                >
                  To
                  :
                   
                </div>
                <div
                  className="css-text-901oao css-textMultiLine-cens5h r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-fdjqy7 r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                  dir="auto"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                >
                  Misao Matimbo
                </div>
              </div>
              <div
                className="css-text-901oao css-textMultiLine-cens5h r-color-vaa0vc r-flexShrink-1q142lx r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-qvk6io r-paddingBottom-1mdbw0j r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                dir="auto"
                style={
                  Object {
                    "WebkitLineClamp": 1,
                  }
                }
              >
                aaa
              </div>
            </div>
            <div
              className="css-view-1dbjc4n"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeedListItem - Withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-borderRadius-1xfd6ze r-boxShadow-1d1oby0 r-cursor-1loqt21 r-flexDirection-18u37iz r-marginHorizontal-1ybube5 r-marginTop-knv0ih r-touchAction-1otgn73 r-userSelect-lrvibr"
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-14lw9ot r-borderRadius-1xfd6ze r-flex-13awgt0 r-justifyContent-1777fci r-overflow-1udh08x r-paddingLeft-1m04atk"
    >
      <div
        className="css-view-1dbjc4n r-backgroundColor-1u0cb7k r-backgroundImage-o7i658 r-backgroundRepeat-1w25a1u r-backgroundSize-2gj1kk r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-5soawk"
      />
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-flexGrow-16y2uox r-justifyContent-1777fci r-maxHeight-pm9dpa r-padding-edyy15 r-width-13qz1uu"
      >
        <div
          className="css-view-1dbjc4n r-width-1h2t8mc"
        />
        <div
          className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-marginLeft-1jkjb"
        >
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-borderBottomWidth-wgabs5 r-borderStyle-1phboty r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1wbh5a2 r-justifyContent-1wtj0ep r-paddingBottom-1inuy60"
            style={
              Object {
                "borderBottomColor": "rgba(0,195,174,1.00)",
              }
            }
          >
            <div
              className="css-text-901oao r-color-vaa0vc r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-qvk6io r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
              dir="auto"
            >
              01.04.19 15:03
            </div>
            <div
              className="css-text-901oao r-color-qjtdzx r-fontFamily-vnw8o6 r-fontSize-a023e6 r-fontWeight-b88u0q r-lineHeight-qvk6io r-marginLeft-1jj8364 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
              dir="auto"
            >
              +
            </div>
            <div
              className="css-view-1dbjc4n r-alignItems-1d09ksm r-display-6koalj r-flexDirection-18u37iz"
            >
              <div
                className="css-text-901oao r-color-qjtdzx r-fontFamily-6jnb14 r-fontSize-hiw28u r-fontWeight-b88u0q r-lineHeight-qvk6io r-marginRight-1d4mawv r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                dir="auto"
              >
                0.04
              </div>
              <div
                className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
              >
                <div
                  className="css-text-901oao r-color-qjtdzx r-fontFamily-6jnb14 r-fontSize-10x49cs r-fontWeight-b88u0q r-lineHeight-1p6fy00 r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                  dir="auto"
                >
                  G
                </div>
                <div
                  className="css-text-901oao r-color-qjtdzx r-fontFamily-6jnb14 r-fontSize-10x49cs r-fontWeight-b88u0q r-lineHeight-1p6fy00 r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                  dir="auto"
                >
                  $
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1wbh5a2 r-height-1w2pmg r-justifyContent-1777fci r-position-bnwqim"
          >
            <div
              aria-disabled={true}
              className="css-view-1dbjc4n r-alignItems-1awozwy r-alignSelf-k200y r-backgroundColor-qt01xk r-borderColor-y68mpx r-borderWidth-rs99b7 r-height-1w2pmg r-justifyContent-1777fci r-left-1d2f490 r-marginTop-knv0ih r-position-u8s1d r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-1h2t8mc"
              onClick={[Function]}
              onContextMenu={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "WebkitTransitionDuration": "0s",
                  "borderBottomLeftRadius": "0px",
                  "borderBottomRightRadius": "0px",
                  "borderTopLeftRadius": "0px",
                  "borderTopRightRadius": "0px",
                  "transitionDuration": "0s",
                }
              }
              tabIndex="-1"
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
                style={
                  Object {
                    "borderBottomLeftRadius": "-1px",
                    "borderBottomRightRadius": "-1px",
                    "borderTopLeftRadius": "-1px",
                    "borderTopRightRadius": "-1px",
                    "height": "-2px",
                    "width": "-2px",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style={
                    Object {
                      "borderBottomLeftRadius": "-1px",
                      "borderBottomRightRadius": "-1px",
                      "borderTopLeftRadius": "-1px",
                      "borderTopRightRadius": "-1px",
                      "height": "-2px",
                      "width": "-2px",
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
                    style={
                      Object {
                        "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
                  />
                </div>
              </div>
            </div>
            <div
              className="css-view-1dbjc4n r-alignItems-1habvwh r-display-6koalj r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-justifyContent-17s6mgv r-marginBottom-p1pxzi r-marginRight-1kb76zh r-marginTop-1mnahxq"
            >
              <div
                className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexShrink-1q142lx r-marginTop-kc8jnq"
              >
                <div
                  className="css-text-901oao css-textMultiLine-cens5h r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-1f529hi r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                  dir="auto"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                      "minWidth": "10px",
                    }
                  }
                >
                  From
                  :
                   
                </div>
                <div
                  className="css-text-901oao css-textMultiLine-cens5h r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-qvk6io r-textAlign-fdjqy7 r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                  dir="auto"
                  style={
                    Object {
                      "WebkitLineClamp": 1,
                    }
                  }
                >
                  Misao Matimbo
                </div>
              </div>
              <div
                className="css-text-901oao css-textMultiLine-cens5h r-color-vaa0vc r-flexShrink-1q142lx r-fontFamily-vnw8o6 r-fontSize-10x49cs r-fontWeight-1it3c9n r-lineHeight-qvk6io r-paddingBottom-1mdbw0j r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-1ozqkpa"
                dir="auto"
                style={
                  Object {
                    "WebkitLineClamp": 1,
                  }
                }
              >
                aaa
              </div>
            </div>
            <div
              className="css-view-1dbjc4n"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
